Implemented more scanner. Added full_scan script

--- a/config.py.example
+++ b/config.py.example
@@ -5,3 +5,9 @@ REGIONS = ["eu-central-1", "eu-west-1"]
 
 # Alert when EC2 instances run for this amount of days
 EC2_OLD_DAYS = 100
+
+# Alert when EC2 snapshots are this old
+EC2_SNAPSHOT_OLD_DAYS = 100
+
+# Alert when RDS snapshots are this old
+RDS_SNAPSHOT_OLD_DAYS = 100
